--- a/include/views/default/crunchbutton/frontend/orders.phtml
+++ b/include/views/default/crunchbutton/frontend/orders.phtml
@@ -45,7 +45,7 @@
 				<p>
 					You are <b>{{account.user.points.away_free_delivery}}</b> points away from a free delivery.<br>
 					Earn points by ordering food, sharing your order, or referring friends.<br>
-					Get your friends to enter your code {{account.user.invite_code}} in the Notes section of their first order, and you'll both get $3 off ;)
+					Get your friends to enter your code {{account.user.invite_code}} in the Notes section of their first order, and they will get $3 off and you a delivery free ;)
 					<br>
 					<b></b>
 				</p>
