--- a/include/views/default/seven/frontend/orders.phtml
+++ b/include/views/default/seven/frontend/orders.phtml
@@ -16,18 +16,26 @@
 
 	<div class="divider"></div>
 
-	<p>Share this family and friends code and both of you get your next delivery on us.</p><br/>
-	<p class="order-code"><strong>{{account.user.invite_code}}</strong></p>
-
+	<div ng-show="account.user.invite_code">
+		<p>
+			Get your friends to enter your code below in the Notes section of their first order, and they will get $3 off and you a 	delivery free ;)
+		</p><br/>
+		<p class="order-code"><strong>{{account.user.invite_code}}</strong></p>
+	</div>
 	<br/>
 
-	<div class="button-pushable">
-		<button class="button facebook" ng-click="referral.facebook()">
-			<i class="fa fa-facebook-square"></i><span>Share</span>
-		</button>
-	</div>
 
-	<br/><br/>
+	<button class="button facebook" ng-click="referral.facebook()">
+		<i class="fa fa-facebook-square"></i> <span>Share</span>
+	</button>
+
+	<br><br>
+
+	<button class="button twitter" ng-click="referral.twitter()">
+		<i class="fa fa-twitter-square"></i> <span>Tweet</span>
+	</button>
+
+	<br><br>
 
 </div>
 
