--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -114,6 +114,13 @@ We'll tell you how much the food should cost. If it costs more, email <a href="m
         <br>
 Hang onto the food, text the customer and leave a friendly voicemail. Then go on to your next order, and hopefully the customer will respond soon! Meanwhile, let us know too, by text.<br><br>
 
+        <b>Help, I need to contact the customer and/or restaurant!</b><br>
+
+        Within each order on Cockpit.LA, there is a phone number next to both the customer and restaurant's name. Tapping that number will put you straight into a call or text with the customer or restaurant.<br><br>
+
+        <b>How do I get from the restaurant to the customer?</b><br>
+
+        Within each order, we've embedded GPS directions from Point A (the restaurant) to Point B (the customer). Just click on the map, and off you go!<br><br>
         <b>
         Can I pick up multiple orders at once?
         </b>
@@ -142,7 +149,10 @@ Absolutely. You don't have to deliver an order before picking up the next one. W
 Customer: O hello kind driver. Hurray my food, how much is it??<br>
 You: $25.67, <i>not including tip</i>.<br>
 Customer: Ok, here, have a million dollars, keep the change.<br>
-You: K thx bye.<br><br>
+You: K thx bye.<br>
+        Provide good service! Maintain good communication between you and your customer and shoot them an apologetic text if their food is going to be delayed!
+        "Hey, [RestaurantName] is really backed up today so it'll be a little longer than the delivery estimate. Really sorry about that! I'll be there with your food as soon as humanly possible!"
+        <br><br>
 
 		<b>
 			How do I pick up food faster at the restaurant?
