--- a/include/views/default/cockpit/charts/community/index.phtml
+++ b/include/views/default/cockpit/charts/community/index.phtml
@@ -172,12 +172,12 @@ $( document ).ready( function(){
 		}
 	});
 
-	<?php foreach( $communities as $community ) {
-		if( $community->hasShiftThisWeek() ){ ?>
-			$( '#checkbox-<?php echo $community->id_community;?>' ).iCheck( 'check' );
-	<?php
-		}
-	 } ?>
+<!--	--><?php //foreach( $communities as $community ) {
+//		if( $community->hasShiftThisWeek() ){ ?>
+//			$( '#checkbox-<?php //echo $community->id_community;?>//' ).iCheck( 'check' );
+//	<?php
+//		}
+//	 } ?>
 
 } );
 
