--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -345,7 +345,14 @@
 		</br>
 	</div>
 
+
+
 	<div class="divider"></div><br><br><br>
 
+			<div class="order-info2 order-info-small">
+				If prices in store differ from what it says above, plz let us know!<br>
+				Just email your receipt and the order number to <a href="mailto:menus@crunchbutton.com">menus@crunchbutton.com</a>.<br>
+				1 in 3 menu updates will earn you a random $ amount bonus ;)
+			</div>
 
 </div>
