--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -190,8 +190,8 @@
 			<a href="http://www.linkedin.com/company/crunchbutton" target="_blank"><i class="fa fa-linkedin"></i></a>
 		</div>
 		<div class="footer-download">
-			<div class="app-store"></div>
-			<div class="play-store"></div>
+			<a href="/download"><div class="app-store"></div></a>
+			<a href="/download"></a><div class="play-store"></div></a>
 		</div>
 		<div class="divider"></div>
 		<? /*
