--- a/include/views/default/seven/frontend/restaurants.phtml
+++ b/include/views/default/seven/frontend/restaurants.phtml
@@ -106,8 +106,8 @@
 							<h3 class="restaurants-description">{{restaurant._short_description}}</h3>
 
 							<div ng-switch on="restaurant._tag">
-								<div class="meal-item-tag" ng-switch-when="closed">Available {{restaurant._opensIn_formatted}}</div>
-								<div class="meal-item-tag" ng-switch-when="force_close">Temporarily closed {{restaurant._closedDueTo}}</div>
+								<div class="meal-item-tag about-to-open" ng-switch-when="closed">Available {{restaurant._opensIn_formatted}}</div>
+								<div class="meal-item-tag about-to-open" ng-switch-when="force_close">Temporarily closed {{restaurant._closedDueTo}}</div>
 								<div class="meal-item-tag" ng-switch-when="takeout">Take out only</div>
 								<div class="meal-item-tag" ng-switch-when="next_open">{{restaurant.next_open_time_message.message}}</div>
 								<div class="meal-item-tag about-to-close" ng-switch-when="closing">Hurry, closes in {{restaurant._closesIn}} min!</div>
