Allow us to customize the Auto-Closed message at a community #5107

--- a/include/views/default/cockpit2/frontend/communities/communities-form.phtml
+++ b/include/views/default/cockpit2/frontend/communities/communities-form.phtml
@@ -135,6 +135,14 @@
 				</div>
 			</li>
 
+			<li class="li-input" ng-show="community.is_auto_closed" ng-class="{'error':form.communityDriverRestaurantName.$invalid}">
+				<div class="label">Auto closed message:</div>
+				<div class="input"><input type="text" name="communityDriverRestaurantName" ng-model="community.driver_restaurant_name" ng-required="community.is_auto_closed"></div>
+				<div class="box-error">
+					<small ng-show="form.communityDriverRestaurantName.$error.required">Required.</small>
+				</div>
+			</li>
+
 			<li class="li-input" ng-class="{'error':form.communityCloseAllRestaurants.$invalid}">
 				<div class="label">Close All Restaurants:</div>
 				<div class="input">
@@ -166,7 +174,7 @@
 
 			<li class="li-input" ng-show="community.close_3rd_party_delivery_restaurants || community.is_auto_closed" ng-class="{'error':form.communityClose3rdPartyRestaurantsNote.$invalid}">
 				<div class="label">Close 3rd Party Delivery Restaurants Note (follow this same format. e.g. - "Launching Mon 2/2 6PM-12AM"):</div>
-				<div class="input"><input type="text" name="communityClose3rdPartyRestaurantsNote" ng-model="community.close_3rd_party_delivery_restaurants_note" ng-required="community.close_3rd_party_delivery_restaurants || community.is_auto_closed"></div>
+				<div class="input"><input type="text" name="communityClose3rdPartyRestaurantsNote" ng-model="community.close_3rd_party_delivery_restaurants_note" ng-required="community.close_3rd_party_delivery_restaurants"></div>
 				<div class="box-error">
 					<small ng-show="form.communityClose3rdPartyRestaurantsNote.$error.required">Required.</small>
 				</div>
