--- a/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
@@ -14,7 +14,6 @@
 
 		<div ng-if="shifts.length">
 
-
 			<div class="drivers-shift drivers-schedule">
 
 			<div>
@@ -62,30 +61,47 @@
 				<div class="box-content2">
 
 					<table class="tb-grid">
-						<tr ng-repeat="shift in shifts" ng-if="shift.ranking > 0">
-							<td>
-								<div class="schedule-day">{{shift.day}}</div>
-								<div class="schedule-period">
-									{{shift.period}} <span class="schedule-tz">{{shift.tz}}</span>
-								</div>
-							</td>
-							<td class="td-large schedule-buttons">
-								<button class="button schedule-action-down" ng-if="shift.ranking_next" ng-click="rankingChange( shift.id_community_shift,  shift.ranking_next )">
-									<i class="fa fa-sort-desc"></i>
-								</button>
-								<button class="button schedule-action-up" ng-if="shift.ranking_prev" ng-click="rankingChange( shift.id_community_shift, shift.ranking_prev )">
-									<i class="fa fa-sort-asc"></i>
-								</button>
-								<button class="button schedule-action-not" ng-if="!shift.assigned" ng-click="dontWantToWork( shift.id_community_shift )">
-									<i class="fa fa-thumbs-o-down"></i>
-								</button>
-								<button class="button schedule-action-lock" ng-if="shift.assigned">
-									<i class="fa fa-lock"></i>
-								</button>
-							</td>
-						</tr>
+						<tbody ng-repeat="shift in shifts" ng-if="shift.ranking > 0" >
+							<tr>
+								<td>
+									<div class="schedule-day">{{shift.day}}</div>
+									<div class="schedule-period">
+										{{shift.period}} <span class="schedule-tz">{{shift.tz}}</span>
+									</div>
+								</td>
+								<td class="td-large schedule-buttons">
+									<button class="button schedule-action-down" ng-if="shift.ranking_next" ng-click="rankingChange( shift.id_community_shift,  shift.ranking_next )">
+										<i class="fa fa-sort-desc"></i>
+									</button>
+									<button class="button schedule-action-up" ng-if="shift.ranking_prev" ng-click="rankingChange( shift.id_community_shift, shift.ranking_prev )">
+										<i class="fa fa-sort-asc"></i>
+									</button>
+									<button class="button schedule-action-not" ng-if="!shift.assigned" ng-click="dontWantToWork( shift.id_community_shift )">
+										<i class="fa fa-thumbs-o-down"></i>
+									</button>
+									<button class="button schedule-action-lock" ng-if="shift.assigned">
+										<i class="fa fa-lock"></i>
+									</button>
+								</td>
+							</tr>
+						</tbody>
+						<tbody>
+							<tr>
+								<td colspan="2">
+									<ul class="ul-inputs">
+										<li class="li-input" ng-show="!isSaving">
+											<button class="button save" ng-click="save();">Save</button>
+											You must save your changes!
+										</li>
+										<li class="li-input" ng-show="isSaving">
+											<i class="fa fa-circle-o-notch fa-spin"></i>
+										</li>
+									</ul>
+								</td>
+							</tr>
+						</tbody>
 					</table>
-
+					<div class="divider"></div>
 				</div>
 
 			</div>
@@ -111,7 +127,7 @@
 							</td>
 						</tr>
 					</table>
-
+					<div class="divider"></div>
 				</div>
 			</div>
 
