cockpit.la: fix SLOW driver shift preference changes #4474

--- a/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
@@ -74,7 +74,7 @@
 										{{shift.period}} <span class="schedule-tz">{{shift.tz}}</span>
 									</div>
 								</td>
-								<td class="td-large schedule-buttons">
+								<td class="td-larger schedule-buttons">
 									<button class="button schedule-action-down" ng-if="shift.ranking_next" ng-click="rankingChange( shift.id_community_shift,  shift.ranking_next )">
 										<i class="fa fa-sort-desc"></i>
 									</button>
