--- a/include/views/default/crunchbutton/frontend/restaurants.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurants.phtml
@@ -13,7 +13,7 @@
 		<h2 ng-bind-html-unsafe="tagline"></h2>
 	</div>
 	<div>
-		<h2 ng-if="allClosed && community_closed" class="community-closed-message home-welcome home-tagline main-content-readable">{{community_closed}}</h2>
+		<h2 ng-if="allClosed && community_closed" ng-bind-html-unsafe="community_closed" class="community-closed-message home-welcome home-tagline main-content-readable"></h2>
 	</div>
 
 	<? /*
