--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -231,7 +231,7 @@ Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a>. You can also
         </b><br>
 First, contact other drivers from cockpit.la/drivers/shifts to ask if someone can trade with you. Then text us to know about the trade.<br><br>
 
-If you absolutely can’t find anyone yourself, it's important you give us 2 days notice if you can't make a shift you're scheduled for. We put a lot of faith in drivers to show up for their shifts. Otherwise we might have to shut down the community, which leads to sad customers and other drivers potentially not being able to work!<br><br>
+If you absolutely can’t find anyone yourself, it's important you give us 2 days notice if you can't make a shift you're scheduled for. We put a lot of faith in drivers to show up for their shifts. Otherwise we might have to shut down the community, which leads to sad customers and other drivers potentially not being able to work! Otherwise you may incur a $10 deduction from your paycheck.<br><br>
 <!--end #shifts section-->
 
 <!--start #moreHelp section-->
