--- a/include/views/default/seven/frontend/location.phtml
+++ b/include/views/default/seven/frontend/location.phtml
@@ -201,7 +201,7 @@
 		<div class="two-col">
 
 				<h4>We’re expanding!</h4>
-				<p>We may not be everywhere yet, but the communities we are in love us! Browse some of the food from or most popular locations:</p>
+				<p>We may not be everywhere yet, but the communities we are in love us! Browse some of the food from our most popular locations:</p>
 				<br /><br /><br />
 				<p>
 					<span class="popular-location" ng-repeat="alias in topCommunities">
