send a digest of all CS tickets since last digest every morning at 10 am #5006

--- a/include/views/mail/crunchbutton/cs/digest.phtml
+++ b/include/views/mail/crunchbutton/cs/digest.phtml
@@ -13,7 +13,7 @@
 <?php foreach ($messages as $message) : ?>
 <tr>
     <td><?= $message->firstMessage()->name ?></td>
-    <td><?=  DATE_FORMAT(new DateTime($message->firstMessage()->date), 'g:i A')?></td>
+    <td nowrap="nowrap"><?=  DATE_FORMAT(new DateTime($message->firstMessage()->date), 'g:i A')?></td>
     <td><?= $message->firstMessage()->body ?></td>
     <td><?= $message->firstMessage()->phone ?></td>
 </tr>
