fixed padding issue

--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -1410,6 +1410,10 @@ p {
 	.footer-column-quote .quote {
 		font-size: 4em;
 	}
+	
+	.footer .content-padding {
+		padding-bottom: 0;
+	}
 
 	html {
 		position: relative;
