only show first line of address

--- a/include/views/default/cockpit2/frontend/drivers/drivers-orders.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-orders.phtml
@@ -74,7 +74,7 @@
 								</div>
 
 								<div ng-if="order.address" class="customer-address">
-									{{order.address}}
+									{{order.addressFirstLine}}
 								</div>
 
 							</div>
