--- a/include/views/default/seven/frontend/restaurants.phtml
+++ b/include/views/default/seven/frontend/restaurants.phtml
@@ -116,7 +116,7 @@
 								</div>
 							</div>
 
-							<div class="meal-item-tag-bottom" ng-if="restaurant._tag == 'closing' || restaurant._tag == 'takeout' || restaurant._tag == 'force_close'"></div>
+							<div class="meal-item-tag-bottom" ng-if="restaurant._tag != ''"></div>
 
 						</div>
 					</div>
